--- a/assets/css/habit.css
+++ b/assets/css/habit.css
@@ -37,7 +37,7 @@ body{
     
 }
 
-/* content style */
+/* content for add habit  style */
 #content{
     display: flex;
     flex-direction: column;
@@ -53,7 +53,7 @@ body{
     font-size: 20px;
     font-weight: bold;
 }
-/* all input style  */
+/* input style  */
 input{
     border: none;
     outline: none;
@@ -66,20 +66,13 @@ input{
     transition: all 1s ease-out;
 }
 
-/* all input active state style */
+/*  input active state style */
 input:active {
     background-color: grey;
     border: none;
 }
 
 /* button container style */
-#buttons{
-    position: relative;
-    left: 10%;
-    margin: 4% 0;
-   
-}
-
 /* button style */
 button{
     border: none;
@@ -91,13 +84,13 @@ button{
     top: 7px;
 }
 
-/* hover effect on add button and delete button */
-#addHabit:hover, #deleteHabit:hover {
+/* hover effect on add button  */
+#addHabit:hover {
     box-shadow: 1px 1px 8px 2px white;
 
 }
 
-/* styling for add button */
+/* styling for add habit button */
 #addHabit{
     width: 40%;
     font-size: 1.2rem;
@@ -107,9 +100,8 @@ button{
     background:  lightblue;
 }
 
-
-
 /* display tasks list style  */
+
 /* styling for delete button */
 #deleteHabit{
     width: 10%;
@@ -120,48 +112,7 @@ button{
     /* background:  lightblue; */
 }
 
-/* #deleteHabit .btn {
-    color: red;
-} */
-
-#progress {
-
-    bottom: 22px;
-    right: 22px;
-    border-radius: 50%;
-    margin: 13px 0 0 0;
-    padding: 0 14px;
-    cursor: pointer;
-}
-
-/* #creator,
-#progress {
-    border: 0;
-    border-radius: 0;
-    background: #728986;
-    outline: none;
-    color: #fff;
-    /* transition: background .15s ease; */
-
-} */
-.dot {
-    height: 70px;
-    width: 70px;
-    /* background-color: #bbb; */
-    /* border-radius: 50%; */
-    display: inline-block;
-}
-
-.App {
-    text-align: center;
-    color: red;
-}
-/* #habit-detail span{
-    display: inline-flex;
-    align-self: start;
-    justify-content: space-around;
-} */
-
+/* habits content style */
 .card-header{
     background-color: #cff2f2;
     color: black;
@@ -172,7 +123,7 @@ button{
     /* display: inline-block; */
 }
 
-
+/* heading weekly div style */
 .card-head2 {
     /* background-color: #cff2f2; */
     /* color: #8a2be2; */
@@ -183,56 +134,48 @@ button{
 }
 
 
-/******** Weekly days  bar ********/
+/*** Weekly days bar ***/
 
-  
-.circular-progress {
+/* weekly progress days style */
+.weekly-progress {
     position: relative;
-    /* height: 50px; */
     height: auto;
     width: 50px;
     margin-left: 10px;
     margin-right: 10px;
-    /* border-radius: 50%; */
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     place-items: center;
     cursor: pointer;
-    /* background: lightblue; */
-    /* background: conic-gradient(rgb(105, 105, 195) 360deg, rgb(202, 220, 255) 360deg); */
-  }
-  .circular-progress::before:hover{
-    background-color:  conic-gradient(rgb(130, 130, 243) 360deg);
-  }
+    /* background: lightblue; */ 
+}
   
-  .circular-progress:before {
+  
+.weekly-progress:before {
     content: "";
     position: absolute;
-    /* height: 84%; */
-    /* width: 84%; */
-    /* background-color: #ffffff; */
-    /* background-color: rgb(220, 216, 216); */
     display: flex;
     flex-wrap: wrap;
     color: black;
     border-radius: 50%;
-  }
+}
   
-  .value-container {
+/* progress week days values style */
+.value-container {
     position: relative;
     font-family: "Poppins", sans-serif;
     font-size: 12px;
     /* color: #9a5281; */
     color: black;
     font-weight:bold;
-   
-  }
-  .habit-days{
+}
+
+/* style for week days */
+.habit-days{
     display: flex;
-    /* flex-wrap: wrap; */
     flex-direction: row;
-  }
+}
 
 
