--- a/views/habit.ejs
+++ b/views/habit.ejs
@@ -5,12 +5,14 @@
     <!-- Meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="icon" type="image/svg+xml" href="https://example.com/image.svg"> -->
+    <!-- FontAwesome Icon Script -->
+    <script src="https://kit.fontawesome.com/d5635d350d.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+    <!-- External css link -->
     <link rel="stylesheet" href="/css/habit.css">
     <title>Habit tracker</title>
 </head>
@@ -49,7 +51,7 @@
     <!--end Form for adding task -->
 
     <!-- Displaying Habits -->
-    <div class="row justify-content-center mt-3 mb-5 " id="habts-container">
+    <div class="row justify-content-center mt-3 mb-5 " >
 
         <% habit.forEach(habits=> { let tzoffset = (new Date()).getTimezoneOffset() * 60000, found=false, status='';
             var today = (new Date(Date.now() - tzoffset)).toISOString().slice(0, 10);
@@ -61,7 +63,7 @@
             }
             });
             %>
-            <div class="col-md-10 " id="habts-list">
+            <div class="col-md-10 " id="habits-list">
                 <div class='shadow-lg border border-light rounded  mt-3 p-4 bg-white '>
                     <!--  Delete Habit button div-->
                     <div class='float-end shadow-sm me-2 justify-content-center' id="deleteHabit">
@@ -106,7 +108,7 @@
 
                                             <th>
 
-                                                <div class="circular-progress">
+                                                <div class="weekly-progress">
 
                                                     <div class="value-container">
                                                         <%= day.day %> 
@@ -125,6 +127,7 @@
                                         <tr>
 
                                             <td class=" pb-3">
+                                                <!-- habit status marks -->
                                                 <a href="habitStatus/?id=<%= habits._id %>&date=<%= day.date %>">
                                                     <% if(found && status==='done' ){ %>
                                                         <img src="https://cdn.pixabay.com/photo/2012/04/11/17/44/check-mark-29114_1280.png" alt="check"
@@ -155,28 +158,16 @@
 </div>
 <!-- end container -->
 
-    <!-- Heading -->
-    <div style="margin-top: 40px ;">
-        <h1 class="text-center" style="color: #222; font-weight: 700; font-size: 3rem;">
-            Habit Tracker
-        </h1>
-    </div>
-
-
-    
-    <!-- FontAwesome Icon Script -->
-    <script src="https://kit.fontawesome.com/d5635d350d.js" crossorigin="anonymous"></script>
-    <!-- Bootstrap Scripts -->
-    <!-- <script>
-        $('[data-toggle="tooltip"]').tooltip({ 'placement': 'bottom' });
-    </script> -->
+    <!-- Bootstrap Scripts link -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
         integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
         crossorigin="anonymous"></script>
-        <script src="/js/habit.js"></script>
+
+    <!-- external script link -->
+    <script src="/js/habit.js"></script>
     </body>
 
 </html>
