--- a/assets/css/habit.css
+++ b/assets/css/habit.css
@@ -43,7 +43,7 @@ body{
     flex-direction: column;
     align-items: flex-start;
     text-align: center;
-    border-top: .1px solid grey;
+    /* border-top: .1px solid grey; */
     padding: 10px;
     box-sizing: border-box;
    
